# pro3

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
data/raw/clova_note/: clova_note_project_direction_2026-06-29.converted-clova-response.json  clova_note_project_direction_2026-06-29.txt
meeting_rag/: __init__.py  chunking.py  config.py  minutes.py  parsing.py  pipeline.py  rag.py  vectordb.py
outputs/: minutes.md
src/discord_crawler/: __init__.py  crawl.py  rag.py
tests/: test_crawl.py  test_rag.py
