[project]
name = "skn-30-project3"
version = "0.1.0"
description = "Discord message crawler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.0",
    "discord.py>=2.5.0",
    "kiwipiepy>=0.23.2",
    "langgraph>=1.2.6",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
crawl-discord-messages = "discord_crawler.crawl:main"
build-rag-index = "discord_crawler.rag:build_index_main"
ask-discord-rag = "discord_crawler.rag:ask_main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
